Your commit message

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,6 @@ body {
     display: block;
     z-index: 1000;
 }
-
 /* Dropdown menu items */
 .updrop-menu li {
     padding: 10px;
@@ -258,6 +257,7 @@ body {
     bottom: 74%;
     z-index: 499;
     height: 8%;
+    border-right: 0px;
 }
 .blud-line {
     align-self: center;
@@ -267,8 +267,8 @@ body {
     justify-content: center;
     align-items: center;
     position: fixed;
-    left: 41%;
-    top: 50%;
+    left: 40.9%;
+    top: 18%;
     z-index: 499;
     height: 48%;
 }
@@ -414,7 +414,7 @@ body {
     border-radius: 15px;
     box-sizing: border-box;
     flex-shrink: 0;
-    z-index: 9999;
+    z-index: 9;
     float: left;
     flex-direction: column;
     text-align: center;
@@ -706,7 +706,7 @@ body {
     <div class="blud-bar" style="bottom: 66%;">
         <button class="blud-button" onclick="toggleStyling()"><i class="fa-solid fa-arrow-pointer"></i></a>
     </div>
-    <div class="blud-line" style="bottom: 66%;"></div>
+    <div class="blud-line"></div>
     <div style="
     position: absolute;
     top: 59%; 
@@ -717,6 +717,7 @@ body {
     background-color: black; 
     border-radius: 4%;
     padding: 10px;
+    border: 1px solid;
 ">
 
 </div>
