--- a/public/404.html
+++ b/public/404.html
@@ -1,3 +1,36 @@
-<h1>Four o Four</h1>
-</br>
-<h1>ERROR</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 - Page Not Found</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: 'Arial', sans-serif;
+            background-color: #282c34;
+            color: #61dafb;
+        }
+        h1 {
+            font-size: 120px;
+            margin: 0;
+        }
+        p {
+            font-size: 24px;
+        }
+        .container {
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>404</h1>
+        <p>Page Not Found</p>
+    </div>
+</body>
+</html>
