Your commit message

--- a/public/games.html
+++ b/public/games.html
@@ -17,6 +17,12 @@
     <link rel="stylesheet" type="text/css" href="css/i.css">
     <link rel="stylesheet" type="text/css" href="css/games.css">
     <link rel="icon" type="image/x-icon" href="Imgs/favicon.ico">
+
+<style>
+body {
+    background-color: linear-gradient(135deg, #0f0063, #4e06a0, #b300ff)
+}
+</style>
 </head>
 <body>
 <a class="sigma-button" href="games.html" onclick="clearGameAutoOpen()" class="fa-brands fa-gamepad"></a>
@@ -612,8 +618,9 @@ window.onload = function () {
 </li><button class="btn" data-path="Games/2048 Meme/CLICK ME.html"><img class="imgg" src="" alt="">2048 Meme</button></li>
 </li><button class="btn" data-path="Games/2048 Reverse/CLICK ME.html"><img class="imgg" src="" alt="">2048 Reverse</button></li>
 </li><button class="btn" data-path="Games/3 Finder/index.html"><img class="imgg" src="" alt="">3 Finder</button></li>
-</li><button class="btn" data-path="Games/7 Days Without Rain/index.html"><img class="imgg" src="" alt="">7 Days Without Rain</button></li>
+</li><button class="btn" data-path="Games/40x Escape/index.html"><img class="imgg" src="" alt="">40x Escape</button></li>
 </li><button class="btn" data-path="Games/4 Player Arcade.html"><img class="imgg" src="" alt="">4 Player Arcade</button></li>
+</li><button class="btn" data-path="Games/7 Days Without Rain/index.html"><img class="imgg" src="" alt="">7 Days Without Rain</button></li>
 </li><button class="btn" data-path="Games/99 Balls.html"><img class="imgg" src="" alt="">99 Balls</button></li>
 </li><button class="btn" data-path="Games/9 Ball/index.html"><img class="imgg" src="" alt="">9 Ball</button></li>
 </li><button class="btn" data-path="Games/10 Count/index.html"><img class="imgg" src="" alt="">10 Count</button></li>
