--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color: linear-gradient(135deg, #0f0063, #4e06a0, #b300ff)
 }
 .custom-dropdown {
     display: flex;
