--- a/public/apps.html
+++ b/public/apps.html
@@ -18,7 +18,9 @@
         <link rel="stylesheet" type="text/css" href="css/Blank2.css">
         <link rel="icon" href="Imgs/favicon.ico" type="image/x-icon">
         <style>
-
+body {
+    background-color: linear-gradient(135deg, #0f0063, #4e06a0, #b300ff)
+}
             #gameSection {
                 display: block;
             }
