--- a/public/tab.html
+++ b/public/tab.html
@@ -113,7 +113,9 @@ body {
 #searchButton:hover {
   background-color: #111;
 }
-
+body {
+    background-color: linear-gradient(135deg, #0f0063, #4e06a0, #b300ff)
+}
 #switcher {
   position: absolute;
   top: 0.25%;
