--- a/public/games.html
+++ b/public/games.html
@@ -620,10 +620,12 @@ window.onload = function () {
 </li><button class="btn" data-path="Games/3 Finder/index.html"><img class="imgg" src="" alt="">3 Finder</button></li>
 </li><button class="btn" data-path="Games/40x Escape/index.html"><img class="imgg" src="" alt="">40x Escape</button></li>
 </li><button class="btn" data-path="Games/4 Player Arcade.html"><img class="imgg" src="" alt="">4 Player Arcade</button></li>
+</li><button class="btn" data-path="Games/60 Second Burger Run/index.html"><img class="imgg" src="" alt="">60 Second Burger Run</button></li>
 </li><button class="btn" data-path="Games/7 Days Without Rain/index.html"><img class="imgg" src="" alt="">7 Days Without Rain</button></li>
 </li><button class="btn" data-path="Games/99 Balls.html"><img class="imgg" src="" alt="">99 Balls</button></li>
 </li><button class="btn" data-path="Games/9 Ball/index.html"><img class="imgg" src="" alt="">9 Ball</button></li>
 </li><button class="btn" data-path="Games/10 Count/index.html"><img class="imgg" src="" alt="">10 Count</button></li>
+</li><button class="btn" data-path="Games/10 Minutes Till Dawn/index.html"><img class="imgg" src="" alt="">10 Minutes Till Dawn</button></li>
 </li><button class="btn" data-path="Games/Adventure Anxiety/index.html"><img class="imgg" src="" alt="">Adventure Anxiety</button></li>
 </li><button class="btn" data-path="Games/Adventure Capitalist/index.html"><img class="imgg" src="" alt="">Adventure Capitalist</button></li>
 </li><button class="btn" data-path="Games/A Dark Room/CLICK ME.html"><img class="imgg" src="" alt="">A Dark Room</button></li>
@@ -638,11 +640,13 @@ window.onload = function () {
 </li><button class="btn" data-path="Games/Asteroids/CLICK ME.html"><img class="imgg" src="" alt="">Asteroids</button></li>
 </li><button class="btn" data-path="Games/Ascii Space.html"><img class="imgg" src="" alt="">Ascii Space</button></li>
 </li><button class="btn" data-path="Games/Awesome Tanks.html"><img class="imgg" src="" alt="">Awesome Tanks</button></li>
+</li><button class="btn" data-path="Games/Bad Time Simulator/index.html"><img class="imgg" src="" alt="">Bad Time Simulator</button></li>
 </li><button class="btn" data-path="Games/Baldis Basics/index.html"><img class="imgg" src="" alt="">Baldis Basics</button></li>
 </li><button class="btn" data-path="Games/Ball Blast.html"><img class="imgg" src="" alt="">Ball Blast</button></li>
 </li><button class="btn" data-path="Games/Ball Sort Halloween/CLICK ME.html"><img class="imgg" src="" alt="">Ball Sort Halloween</button></li>
 </li><button class="btn" data-path="Games/Ball Sort Puzzle/CLICK ME.html"><img class="imgg" src="" alt="">Ball Sort Puzzle</button></li>
 </li><button class="btn" data-path="Games/Ball Sort Soccer/CLICK ME.html"><img class="imgg" src="" alt="">Ball Sort Soccer</button></li>
+</li><button class="btn" data-path="Games/Basketball Stars/index.html"><img class="imgg" src="" alt="">Basketball Stars</button></li>
 </li><button class="btn" data-path="Games/Basket Random/index.html"><img class="imgg" src="" alt="">Basket Random</button></li>
 </li><button class="btn" data-path="Games/Battle For Gondor/index.html"><img class="imgg" src="" alt="">Battle For Gondor</button></li>
 </li><button class="btn" data-path="Games/Bee Swarm Simulator.html"><img class="imgg" src="" alt="">Bee Swarm Simulator</button></li>
@@ -660,6 +664,7 @@ window.onload = function () {
 </li><button class="btn" data-path="Games/Bounce Back/CLICK ME.html"><img class="imgg" src="" alt="">Bounce Back</button></li>
 </li><button class="btn" data-path="Games/Bouncy Ninja 1.html"><img class="imgg" src="" alt="">Bouncy Ninja 1</button></li>
 </li><button class="btn" data-path="Games/Bouncy Ninja 2.html"><img class="imgg" src="" alt="">Bouncy Ninja 2</button></li>
+</li><button class="btn" data-path="Games/Boxing Physics 2/index.html"><img class="imgg" src="" alt="">Boxing Physics 2</button></li>
 </li><button class="btn" data-path="Games/Boxing Random/index.html"><img class="imgg" src="" alt="">Boxing Random</button></li>
 </li><button class="btn" data-path="Games/Break Lock/CLICK ME.html"><img class="imgg" src="" alt="">Break Lock</button></li>
 </li><button class="btn" data-path="Games/Bubble Pop/index.html"><img class="imgg" src="" alt="">Bubble Pop</button></li>
@@ -679,6 +684,7 @@ window.onload = function () {
 </li><button class="btn" data-path="Games/Cookie Clicker/index.html"><img class="imgg" src="" alt="">Cookie Clicker</button></li>
 </li><button class="btn" data-path="Games/Core Ball/CLICK ME.html"><img class="imgg" src="" alt="">Core Ball</button></li>
 </li><button class="btn" data-path="Games/Craftmine/index.html"><img class="imgg" src="" alt="">Craftmine</button></li>
+</li><button class="btn" data-path="Games/Crossy Road/index.html"><img class="imgg" src="" alt="">Crossy Road</button></li>
 </li><button class="btn" data-path="Games/Cube Field/CLICK ME.html"><img class="imgg" src="" alt="">Cube Field</button></li>
 </li><button class="btn" data-path="Games/Dante.html"><img class="imgg" src="" alt="">Dante</button></li>
 </li><button class="btn" data-path="Games/Death Run 3D/index.html"><img class="imgg" src="" alt="">Death Run 3D</button></li>
@@ -707,14 +713,19 @@ window.onload = function () {
 </li><button class="btn" data-path="Games/Flappy Copter/CLICK ME.html"><img class="imgg" src="" alt="">Flappy Copter</button></li>
 </li><button class="btn" data-path="Games/Fluidism/CLICK ME.html"><img class="imgg" src="" alt="">Fluidism</button></li>
 </li><button class="btn" data-path="Games/FNAW/index.html"><img class="imgg" src="" alt="">FNAW</button></li>
+</li><button class="btn" data-path="Games/Fruit Ninja/index.html"><img class="imgg" src="" alt="">Fruit Ninja</button></li>
+</li><button class="btn" data-path="Games/Funny Shooter 1/index.html"><img class="imgg" src="" alt="">Funny Shooter 1</button></li>
 </li><button class="btn" data-path="Games/Funny Shooter 2/index.html"><img class="imgg" src="" alt="">Funny Shooter 2</button></li>
 </li><button class="btn" data-path="Games/Geometry Dash.html"><img class="imgg" src="" alt="">Geometry Dash</button></li>
 </li><button class="btn" data-path="Games/Getaway Shootout/index.html"><img class="imgg" src="" alt="">Getaway Shootout</button></li>
 </li><button class="btn" data-path="Games/Getting Over It.html"><img class="imgg" src="" alt="">Getting Over It</button></li>
 </li><button class="btn" data-path="Games/Google Feud/index.html"><img class="imgg" src="" alt="">Google Feud</button></li>
 </li><button class="btn" data-path="Games/Google Snake.html"><img class="imgg" src="" alt="">Google Snake</button></li>
+</li><button class="btn" data-path="Games/Gun Mayhem 2/index.html"><img class="imgg" src="" alt="">Gun Mayhem 2</button></li>
 </li><button class="btn" data-path="Games/Gun Spin/index.html"><img class="imgg" src="" alt="">Gun Spin</button></li>
+</li><button class="btn" data-path="Games/Happy Wheels/index.html"><img class="imgg" src="" alt="">Happy Wheels</button></li>
 </li><button class="btn" data-path="Games/Helix Jump/CLICK ME.html"><img class="imgg" src="" alt="">Helix Jump</button></li>
+</li><button class="btn" data-path="Games/Hole.io/index.html"><img class="imgg" src="" alt="">Hole.io</button></li>
 </li><button class="btn" data-path="Games/Hextris/CLICK ME.html"><img class="imgg" src="" alt="">Hextris</button></li>
 </li><button class="btn" data-path="Games/Idle Breakout/index.html"><img class="imgg" src="" alt="">Idle Breakout</button></li>
 </li><button class="btn" data-path="Games/Idle Mining/index.html"><img class="imgg" src="" alt="">Idle Mining</button></li>
@@ -726,6 +737,7 @@ window.onload = function () {
 </li><button class="btn" data-path="Games/Kitchen Gun Game/index.html"><img class="imgg" src="" alt="">Kitchen Gun Game</button></li>
 </li><button class="btn" data-path="Games/Konnekt/CLICK ME.html"><img class="imgg" src="" alt="">Konnekt</button></li>
 </li><button class="btn" data-path="Games/Laser Lord.html"><img class="imgg" src="" alt="">Laser Lord</button></li>
+</li><button class="btn" data-path="Games/Line Rider 1/index"><img class="imgg" src="" alt="">Line Rider 1</button></li>
 </li><button class="btn" data-path="Games/Matrix Rampage/index.html"><img class="imgg" src="" alt="">Matrix Rampage</button></li>
 </li><button class="btn" data-path="Games/Mine Sweeper/index.html"><img class="imgg" src="" alt="">Mine Sweeper</button></li>
 </li><button class="btn" data-path="Games/Mini Putt/index.html"><img class="imgg" src="" alt="">Mini Putt</button></li>
@@ -748,7 +760,8 @@ window.onload = function () {
 </li><button class="btn" data-path="Games/Pixel Shooter.html"><img class="imgg" src="" alt="">Pixel Shooter</button></li>
 </li><button class="btn" data-path="Games/Planetesimals/CLICK ME.html"><img class="imgg" src="" alt="">Planetesimals</button></li>
 </li><button class="btn" data-path="Games/Plantale.html"><img class="imgg" src="" alt="">Plantale</button></li>
-</li><button class="btn" data-path="Games/Pong/CLICK ME.html"><img class="imgg" src="" alt="">Pong</button></li>
+</li><button class="btn" data-path="Games/Plants Vs. Zombies/index.html"><img class="imgg" src="" alt="">Plants Vs. Zombies</button></li>
+</li><button class="btn" data-path="Games/Pong/index.html"><img class="imgg" src="" alt="">Pong</button></li>
 </li><button class="btn" data-path="Games/Push Back/CLICK ME.html"><img class="imgg" src="" alt="">Push Back</button></li>
 </li><button class="btn" data-path="Games/Racer/CLICK ME.html"><img class="imgg" src="" alt="">Racer</button></li>
 </li><button class="btn" data-path="Games/Recoil.html"><img class="imgg" src="" alt="">Recoil</button></li>
@@ -757,24 +770,31 @@ window.onload = function () {
 </li><button class="btn" data-path="Games/Retro Haunt/CLICK ME.html"><img class="imgg" src="" alt="">Retro Haunt</button></li>
 </li><button class="btn" data-path="Games/Rise Higher/CLICK ME.html"><img class="imgg" src="" alt="">Rise Higher</button></li>
 </li><button class="btn" data-path="Games/Roadblocks/CLICK ME.html"><img class="imgg" src="" alt="">Roadblocks</button></li>
+</li><button class="btn" data-path="Games/Rocket League/index.html"><img class="imgg" src="" alt="">Rocket League</button></li>
 </li><button class="btn" data-path="Games/Rooftop Snipers 2/index.html"><img class="imgg" src="" alt="">Rooftop Snipers 2</button></li>
 </li><button class="btn" data-path="Games/Rolling Forests.html"><img class="imgg" src="" alt="">Rolling Forests</button></li>
 </li><button class="btn" data-path="Games/Rope Slide 2.html"><img class="imgg" src="" alt="">Rope Slide 2</button></li>
+</li><button class="btn" data-path="Games/Sandtrix/index"><img class="imgg" src="" alt="">Sandtrix</button></li>
 </li><button class="btn" data-path="Games/Sand Game.html"><img class="imgg" src="" alt="">Sand Game</button></li>
 </li><button class="btn" data-path="Games/Sausage Run.html"><img class="imgg" src="" alt="">Sausage Run</button></li>
 </li><button class="btn" data-path="Games/Scratch Brawl 1.html"><img class="imgg" src="" alt="">Scratch Brawl 1</button></li>
 </li><button class="btn" data-path="Games/Scratch Brawl 2.html"><img class="imgg" src="" alt="">Scratch Brawl 2</button></li>
 </li><button class="btn" data-path="Games/Shuttle Deck.html"><img class="imgg" src="" alt="">Shuttle Deck</button></li>
+</li><button class="btn" data-path="Games/Skibidi Toilet/index.html"><img class="imgg" src="" alt="">Skibidi Toilet</button></li>
 </li><button class="btn" data-path="Games/Slime Ninja.html"><img class="imgg" src="" alt="">Slime Ninja</button></li>
 </li><button class="btn" data-path="Games/Sling Drift.html"><img class="imgg" src="" alt="">Sling Drift</button></li>
 </li><button class="btn" data-path="Games/Slope.html"><img class="imgg" src="" alt="">Slope</button></li>
 </li><button class="btn" data-path="Games/Snail Platformer.html"><img class="imgg" src="" alt="">Snail Platformer</button></li>
+</li><button class="btn" data-path="Games/Snowball.io/index.html"><img class="imgg" src="" alt="">Snowball.io</button></li>
 </li><button class="btn" data-path="Games/Snow Rider 3D/index.html"><img class="imgg" src="" alt="">Snow Rider 3D</button></li>
 </li><button class="btn" data-path="Games/Soccer Random/index.html"><img class="imgg" src="" alt="">Soccer Random</button></li>
+</li><button class="btn" data-path="Games/Solitaire/index.html"><img class="imgg" src="" alt="">Solitaire</button></li>
 </li><button class="btn" data-path="Games/Space Company/CLICK ME.html"><img class="imgg" src="" alt="">Space Company</button></li>
 </li><button class="btn" data-path="Games/Space Garden.html"><img class="imgg" src="" alt="">Space Garden</button></li>
 </li><button class="btn" data-path="Games/Space Huggers.html"><img class="imgg" src="" alt="">Space Huggers</button></li>
+</li><button class="btn" data-path="Games/Spank The Monkey/index.html"><img class="imgg" src="" alt="">Spank The Monkey</button></li>
 </li><button class="btn" data-path="Games/Stack.html"><img class="imgg" src="" alt="">Stack</button></li>
+</li><button class="btn" data-path="Games/State.io/index.html"><img class="imgg" src="" alt="">State.io</button></li>
 </li><button class="btn" data-path="Games/Stickman Climb 1.html"><img class="imgg" src="" alt="">Stickman Climb 1</button></li>
 </li><button class="btn" data-path="Games/Stickman Climb 2.html"><img class="imgg" src="" alt="">Stickman Climb 2</button></li>
 </li><button class="btn" data-path="Games/Stickman Hook/index.html"><img class="imgg" src="" alt="">Stickman Hook</button></li>
@@ -783,6 +803,7 @@ window.onload = function () {
 </li><button class="btn" data-path="Games/Subway Surfers/index.html"><img class="imgg" src="" alt="">Subway Surfers</button></li>
 </li><button class="btn" data-path="Games/Suika Game (Watermelon Game).html"><img class="imgg" src="" alt="">Suika Game (Watermelon Game)</button></li>
 </li><button class="btn" data-path="Games/Super Fowlest.html"><img class="imgg" src="" alt="">Super Fowlest</button></li>
+</li><button class="btn" data-path="Games/Super Hot/index.html"><img class="imgg" src="" alt="">Super Hot</button></li>
 </li><button class="btn" data-path="Games/Super Scratch Bros.html"><img class="imgg" src="" alt="">Super Scratch Bros</button></li>
 </li><button class="btn" data-path="Games/Super Stickman Golf/CLICK ME.html"><img class="imgg" src="" alt="">Super Stickman Golf</button></li>
 </li><button class="btn" data-path="Games/Survival Race/index.html"><img class="imgg" src="" alt="">Survival Race</button></li>
@@ -791,6 +812,7 @@ window.onload = function () {
 </li><button class="btn" data-path="Games/Temple Leap.html"><img class="imgg" src="" alt="">Temple Leap</button></li>
 </li><button class="btn" data-path="Games/Terraria.html"><img class="imgg" src="" alt="">Terraria</button></li>
 </li><button class="btn" data-path="Games/Territorial.io.html"><img class="imgg" src="" alt="">Territorial.io</button></li>
+</li><button class="btn" data-path="Games/Tetris/index.html"><img class="imgg" src="" alt="">Tetris</button></li>
 </li><button class="btn" data-path="Games/There Is No Game/index.html"><img class="imgg" src="" alt="">There Is No Game</button></li>
 </li><button class="btn" data-path="Games/Backrooms/index.html"><img class="imgg" src="" alt="">Backrooms</button></li>
 </li><button class="btn" data-path="Games/The Ninja 1.html"><img class="imgg" src="" alt="">The Ninja 1</button></li>
@@ -800,9 +822,11 @@ window.onload = function () {
 </li><button class="btn" data-path="Games/The Ninja 5.html"><img class="imgg" src="" alt="">The Ninja 5</button></li>
 </li><button class="btn" data-path="Games/The Ninja Level Creator.html"><img class="imgg" src="" alt="">The Ninja Level Creator</button></li>
 </li><button class="btn" data-path="Games/The Ninja Master.html"><img class="imgg" src="" alt="">The Ninja Master</button></li>
+</li><button class="btn" data-path="Games/Time Shooter 1/index.html"><img class="imgg" src="" alt="">Time Shooter 1</button></li>
 </li><button class="btn" data-path="Games/Time Shooter 2.html"><img class="imgg" src="" alt="">Time Shooter 2</button></li>
 </li><button class="btn" data-path="Games/Time Shooter 3.html"><img class="imgg" src="" alt="">Time Shooter 3</button></li>
 </li><button class="btn" data-path="Games/Tomb Of The Mask.html"><img class="imgg" src="" alt="">Tomb Of The Mask</button></li>
+</li><button class="btn" data-path="Games/Totally Accurate Battle Simulator (TABS)/index.html"><img class="imgg" src="" alt="">Totally Accurate Battle Simulator (TABS)</button></li>
 </li><button class="btn" data-path="Games/Tower Master/CLICK ME.html"><img class="imgg" src="" alt="">Tower Master</button></li>
 </li><button class="btn" data-path="Games/Trimps/CLICK ME.html"><img class="imgg" src="" alt="">Trimps</button></li>
 </li><button class="btn" data-path="Games/Tube Jumpers.html"><img class="imgg" src="" alt="">Tube Jumpers</button></li>
