--- a/public/games.html
+++ b/public/games.html
@@ -83,6 +83,7 @@ window.onload = function () {
 </li><button class="btn" data-path="Games/Bit Planes/CLICK ME.html"><img class="imgg" src="" alt="">Bit Planes</button></li>
 </li><button class="btn" data-path="Games/Time Shooter 2.html"><img class="imgg" src="" alt="">Time Shooter 2</button></li>
 </li><button class="btn" data-path="Games/Time Shooter 3.html"><img class="imgg" src="" alt="">Time Shooter 3</button></li>
+</li><button class="btn" data-path="Games/Rocket League/index.html"><img class="imgg" src="" alt="">Rocket League</button></li>
 </li><button class="btn" data-path="Games/Paper.io 2.html"><img class="imgg" src="" alt="">Paper.io 2</button></li>
 </li><button class="btn" data-path="Games/Amazing Strange Rope Police/index.html"><img class="imgg" src="" alt="">Amazing Strange Rope Police</button></li>
 </li><button class="btn" data-path="Games/There Is No Game/index.html"><img class="imgg" src="" alt="">There Is No Game</button></li>
@@ -154,6 +155,7 @@ window.onload = function () {
 </li><button class="btn" data-path="Games/Reload.html"><img class="imgg" src="" alt="">Reload</button></li>
 </li><button class="btn" data-path="Games/Scratch Brawl 1.html"><img class="imgg" src="" alt="">Scratch Brawl 1</button></li>
 </li><button class="btn" data-path="Games/Scratch Brawl 2.html"><img class="imgg" src="" alt="">Scratch Brawl 2</button></li>
+</li><button class="btn" data-path="Games/Time Shooter 1/index.html"><img class="imgg" src="" alt="">Time Shooter 1</button></li>
 </li><button class="btn" data-path="Games/Time Shooter 2.html"><img class="imgg" src="" alt="">Time Shooter 2</button></li>
 </li><button class="btn" data-path="Games/Time Shooter 3.html"><img class="imgg" src="" alt="">Time Shooter 3</button></li>
 </li><button class="btn" data-path="Games/Getaway Shootout/index.html"><img class="imgg" src="" alt="">Getaway Shootout</button></li>
@@ -177,6 +179,9 @@ window.onload = function () {
 </li><button class="btn" data-path="Games/N-Gon Master/index.html"><img class="imgg" src="" alt="">N-Gon Master</button></li>
 </li><button class="btn" data-path="Games/Paper.io 2.html"><img class="imgg" src="" alt="">Paper.io 2</button></li>
 </li><button class="btn" data-path="Games/Paper.io 3D.html"><img class="imgg" src="" alt="">Paper.io 3D</button></li>
+</li><button class="btn" data-path="Games/Time Shooter 1/index.html"><img class="imgg" src="" alt="">Time Shooter 1</button></li>
+</li><button class="btn" data-path="Games/Time Shooter 2.html"><img class="imgg" src="" alt="">Time Shooter 2</button></li>
+</li><button class="btn" data-path="Games/Time Shooter 3.html"><img class="imgg" src="" alt="">Time Shooter 3</button></li>
 </li><button class="btn" data-path="Games/Alien Hominid/index.html"><img class="imgg" src="" alt="">Alien Hominid</button></li>
 </li><button class="btn" data-path="Games/Funny Shooter 2/index.html"><img class="imgg" src="" alt="">Funny Shooter 2</button></li>
 </li><button class="btn" data-path="Games/Scratch Brawl 1.html"><img class="imgg" src="" alt="">Scratch Brawl 1</button></li>
@@ -281,6 +286,27 @@ window.onload = function () {
 
 </div>
 
+</div>
+
+</br>
+</br>
+<div style="padding: 2px;"> </div>
+<div class="h6-container" style="position: relative;">
+<li><h6>IO Games</h6></li>
+<button class="scroll-arrow left-arrow"><i class="fas fa-angle-left"></i></button> <!-- Left scroll arrow -->
+<button class="scroll-arrow right-arrow"><i class="fas fa-angle-right"></i></button> <!-- Right scroll arrow -->
+</div>
+</br>
+</br>
+<div class="btn-container">
+</li><button class="btn" data-path="Games/Paper.io 2.html"><img class="imgg" src="" alt="">Paper.io 2</button></li>
+</li><button class="btn" data-path="Games/Paper.io 3D.html"><img class="imgg" src="" alt="">Paper.io 3D</button></li>
+</li><button class="btn" data-path="Games/Hole.io/index.html"><img class="imgg" src="" alt="">Hole.io</button></li>
+</li><button class="btn" data-path="Games/Snowball.io/index.html"><img class="imgg" src="" alt="">Snowball.io</button></li>
+</li><button class="btn" data-path="Games/State.io/index.html"><img class="imgg" src="" alt="">State.io</button></li>
+</li><button class="btn" data-path="Games/Territorial.io.html"><img class="imgg" src="" alt="">Territorial.io</button></li>
+
+</div>
 </br>
 </br>
 <div style="padding: 2px;"> </div>
