Your commit message

--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@ body {
     font-family: Arial, sans-serif;
 }
 .updrop-container {
-    position: fixed;
-    bottom: 34%;
+    position: absolute;
+    bottom: 51%;
     right: 31%;
     z-index: 9000;
 }
@@ -590,6 +590,7 @@ body {
     <a href="Apps/Ruffle/Ruffle.html" class="app-button"><img src="Imgs/Ruffleicon.png" alt="Ruffle"><span>Ruffle</span></a>
     <a href="Apps/Turbowarp/Turbowarp.html" class="app-button"><img src="Imgs/Turbowarpicon.png" alt="Turbowarp"><span>Turbowarp</span></a>
     <a href="Apps/Emulators/Emulator WebRetro/WebRetro.html" class="app-button"><img src="Imgs/Emulator WebRetroicon.png" alt="Emulator WebRetro"><span>WebRetro</span></a>
+    <a href="Apps/MiniWiki.html" class="app-button"><img src="Imgs/MiniWikiicon.png" alt="MiniWiki"><span>MiniWiki</span></a>
     <a href="Apps/Wordle Bot/Wordle Bot.html" class="app-button"><img src="Imgs/Wordle Boticon.png" alt="Wordle Bot"><span>Wordle Bot</span></a>
     <a href="Apps/Weavesilk/index.html" class="app-button"><img src="Imgs/Weavesilkicon.png" alt="Weavesilk"><span>Weavesilk</span></a>
 
@@ -725,7 +726,7 @@ body {
 
 </div>
     <div class="the-set"> </div>
-    <button class="btn"><img class="imgg" src="Imgs/1v1.LOL" alt="">Space</button>
+</li><button class="btn" data-path="Games/Craftmine/index.html"><img class="imgg" src="" alt="">Craftmine</button></li>
 
     <div class="updrop-container">
         <button class="updrop-button"><i class="fa-solid fa-square-pen"></i></button>
