your message here

--- a/public/aiiframe.html
+++ b/public/aiiframe.html
@@ -394,7 +394,7 @@
             if (modelSelect == "human-ai") modelSelect = "deepseek-r1-distill-llama-70b";
             messages[0] = {
                 "role": "system",
-                "content": "You are oMega AI 1.1, a helpful and knowledgeable AI assistant. You are direct, informative, and friendly in your responses. ACT LIKE A HUMAN AND WRITE LIKE A VERY SMART ONE"
+                "content": "Thundercloud AI, a helpful and knowledgeable AI assistant. You are direct, informative, and friendly in your responses. ACT LIKE A HUMAN AND WRITE LIKE A VERY SMART ONE"
             };
 
             chat.appendChild(createMessage(text, 'user'));
