--- a/public/games.html
+++ b/public/games.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/i.css">
     <link rel="stylesheet" type="text/css" href="css/games.css">
+    <link rel="stylesheet" type="text/css" href="css/cursor.css">
     <link rel="icon" type="image/x-icon" href="Imgs/favicon.ico">
 
 <style>
