--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 
 <div class="sigma-bar">
     <a class="sigma-button" onclick="toggleAppaVisibility()"><i class="fas fa-home"></i></a>
-    <a href="https://discord.gg/YqvG3k9YMd" class="sigma-button"><i class="fa-brands fa-discord"></i></a>
+    <a href="https://discord.gg/9KKk4DNBPE" class="sigma-button"><i class="fa-brands fa-discord"></i></a>
     <a href="https://github.com/Yeti1o1/Pulsar" class="sigma-button"><i  class="fa-brands fa-github"></i></a>
     <a href="https://drive.google.com/file/d/1XCHdt4XntG4CMOaCeoJP75GkAfrV_2E4/view?usp=drivesdk" class="sigma-button"><i  class="fas fa-folder" ></i></a>
 </div>
