Your commit message

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <a href="Apps/Algebra Calculator.html" class="app-button"><img src="Imgs/Algebra Calculatoricon.png" alt="Algebra Calculator"><span>Algebra Calculator</span></a>
     <a href="Apps/Simple Calculator.html" class="app-button"><img src="Imgs/Simple Calculatoricon.png" alt="Simple Calculator"><span>Simple Calculator</span></a>
     <a href="Apps/Emulators/Emulator JS/Emulator JS.html" class="app-button"><img src="Imgs/Emulator JSicon.png" alt="Emulator JS"><span>Emulator JS</span></a>
+    <a href="Apps/HTML Unleashed/HTML Unleashed.html" class="app-button"><img src="Imgs/HTML Unleashedicon.png" alt="HTML Unleashed"><span>HTML Unleashed</span></a>
     <a href="Apps/Ruffle/Ruffle.html" class="app-button"><img src="Imgs/Ruffleicon.png" alt="Ruffle"><span>Ruffle</span></a>
     <a href="Apps/Turbowarp/Turbowarp.html" class="app-button"><img src="Imgs/Turbowarpicon.png" alt="Turbowarp"><span>Turbowarp</span></a>
     <a href="Apps/Emulators/Emulator WebRetro/WebRetro.html" class="app-button"><img src="Imgs/Emulator WebRetroicon.png" alt="Emulator WebRetro"><span>WebRetro</span></a>
@@ -224,7 +225,6 @@
         </div>
         <input type="file" id="uploadButton" accept="image/*">
     </div>
-    <div class="custom-cursor" id="customCursor"></div>
     
 </div>
 <script>
